--- a/views/404.html
+++ b/views/404.html
@@ -94,7 +94,7 @@
   </head>
   <body>
      <script>
-    swal('Attention', 'Page Not Found', 'warning')
+    swal('Perhatian', 'Halaman tidak ditemukan atau apikey yang anda masukkan salah!', 'warning')
     </script>
     <div class="clock">
       <div class="hour">
