--- a/views/docs.html
+++ b/views/docs.html
@@ -575,7 +575,7 @@ button1:hover {
         </a>
         </li>
      <li class="nav-item">
-      <a class="nav-link collapsed" href="https://github.com/jauhari21" data-toggle="" data-target="#project"
+      <a class="nav-link collapsed" href="https://tinyurl.com/Kepoya1" data-toggle="" data-target="#project"
           aria-expanded="true" aria-controls="project">
           <i class="fas fa-robot"></i>
           <span>Script Bot</span>
@@ -785,9 +785,8 @@ button1:hover {
        </div>
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw: <a href="https://github.com/jauhari21"
-                  class="btn btn-primary btn-sm" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;GitHub</a></p>
-            </div>
+              <p>Asik kan lagunya? Jangan lupa joget gan xixixi!
+           </div>
           </div>
 
         </div>
