--- a/views/docs.html
+++ b/views/docs.html
@@ -698,7 +698,7 @@ button1:hover {
                 <div class="card-body">
                   <div class="row align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-uppercase mb-1">Road To Idul Fitri</div>
+                      <div class="text-xs font-weight-bold text-uppercase mb-1">Dah lewat Idul Fitri</div>
                       <p class="h5 mb-0 font-weight-bold rainbow" id="IdulFitri"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
@@ -716,7 +716,7 @@ button1:hover {
                 <div class="card-body">
                   <div class="row align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-uppercase mb-1">Ip Andress</div>
+                      <div class="text-xs font-weight-bold text-uppercase mb-1">Ip Andress ente xixixi</div>
                       <p class="h5 mb-0 font-weight-bold rainbow" id="ipanda"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
@@ -734,7 +734,7 @@ button1:hover {
                 <div class="card-body">
                   <div class="row align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-uppercase mb-1">Visitor</div>
+                      <div class="text-xs font-weight-bold text-uppercase mb-1">Pengunjung</div>
                       <p class="h5 mb-0 font-weight-bold rainbow" id="visitorJarAPI"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
@@ -753,7 +753,7 @@ button1:hover {
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-uppercase mb-1">Date</div>
+                      <div class="text-xs font-weight-bold text-uppercase mb-1">Jam Sekarang</div>
                       <p class="h5 mb-0 font-weight-bold rainbow" id="JamSekarang"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
