--- a/views/docs.html
+++ b/views/docs.html
@@ -501,6 +501,7 @@ button1:hover {
       <div id="collapseGames" class="collapse" aria-labelledby="headingForm" data-parent="#accordionSidebar">
        <div class="py-2 collapse-inner rounded">
          <h6 class="collapse-header">Fun Features</h6>
+            <a class="collapse-item" href="/api/simi?kata=Halo&apikey=APIKEY">Simi</a>
             <a class="collapse-item" href="/api/kuis/caklontong?apikey=APIKEY">Cak Lontong</a>
             <a class="collapse-item" href="/api/kuis/tebakgambar?apikey=APIKEY">Tebak Gambar</a>
              <a class="collapse-item" href="/api/hilih?kata=aku kan ganteng banget&apikey=APIKEY">Kata Hilih</a>
