--- a/views/docs.html
+++ b/views/docs.html
@@ -701,7 +701,7 @@ button1:hover {
                   <div class="row align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Dah lewat Idul Fitri</div>
-                      <p class="h5 mb-0 font-weight-bold rainbow" id="IdulFitri"></p>
+                      <p class="h5 mb-0 font-weight-bold animated" id="IdulFitri"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
                     </div>
@@ -719,7 +719,7 @@ button1:hover {
                   <div class="row align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Ip Andress ente xixixi</div>
-                      <p class="h5 mb-0 font-weight-bold rainbow" id="ipanda"></p>
+                      <p class="h5 mb-0 font-weight-bold animated" id="ipanda"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
                     </div>
@@ -737,7 +737,7 @@ button1:hover {
                   <div class="row align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Pengunjung</div>
-                      <p class="h5 mb-0 font-weight-bold rainbow" id="visitorJarAPI"></p>
+                      <p class="h5 mb-0 font-weight-bold animated" id="visitorJarAPI"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
                     </div>
@@ -756,7 +756,7 @@ button1:hover {
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Jam Sekarang</div>
-                      <p class="h5 mb-0 font-weight-bold rainbow" id="JamSekarang"></p>
+                      <p class="h5 mb-0 font-weight-bold animated" id="JamSekarang"></p>
                       <div class="mt-2 mb-0 text-muted text-xs">
                       </div>
                     </div>
