Tebak lirik fitur

--- a/views/docs.html
+++ b/views/docs.html
@@ -504,6 +504,7 @@ button1:hover {
             <a class="collapse-item" href="/api/simi?kata=Halo&apikey=APIKEY">Simi</a>
             <a class="collapse-item" href="/api/kuis/caklontong?apikey=APIKEY">Cak Lontong</a>
             <a class="collapse-item" href="/api/kuis/tebakgambar?apikey=APIKEY">Tebak Gambar</a>
+            <a class="collapse-item" href="/api/kuis/tebaklirik?apikey=APIKEY">Tebak Lirik</a>
             <a class="collapse-item" href="/api/kuis/siapakahaku?apikey=APIKEY">Siapakah Aku</a>
              <a class="collapse-item" href="/api/hilih?kata=aku kan ganteng banget&apikey=APIKEY">Kata Hilih</a>
          </div>
