--- a/views/docs.html
+++ b/views/docs.html
@@ -348,45 +348,21 @@ button1:hover {
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseNSFW" aria-expanded="true"
           aria-controls="collapseNSFW">
           <i class="fas fa-fw fa-bullseye"></i>
-          <span>NSFW API</span>
+          <span>NSFW & SFW API</span>
         </a>
         <div id="collapseNSFW" class="collapse" aria-labelledby="headingNSFW" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">NSFW FITUR</h6>
-                    <a class="collapse-item" href="api/nsfw/ass?apikey=APIKEY">Ass</a>
-                    <a class="collapse-item" href="api/nsfw/ahegao?apikey=APIKEY">Ahegao</a>
-                    <a class="collapse-item" href="api/nsfw/bdsm?apikey=APIKEY">Bdsm</a>
+                    <a class="collapse-item" href="api/nsfw/waifu?apikey=APIKEY">Waifu</a>
+                    <a class="collapse-item" href="api/nsfw/neko?apikey=APIKEY">Neko</a>
+                    <a class="collapse-item" href="api/nsfw/trap?apikey=APIKEY">Trap</a>
                     <a class="collapse-item" href="api/nsfw/blowjob?apikey=APIKEY">Blowjob</a>
-                    <a class="collapse-item" href="api/nsfw/cuckold?apikey=APIKEY">Cuckold</a>
-                    <a class="collapse-item" href="api/nsfw/cum?apikey=APIKEY">Cum</a>
-                    <a class="collapse-item" href="api/nsfw/ero?apikey=APIKEY">Ero</a>
-                    <a class="collapse-item" href="api/nsfw/femdom?apikey=APIKEY">Femdom</a>
-                    <a class="collapse-item" href="api/nsfw/foot?apikey=APIKEY">Foot</a>
-                    <a class="collapse-item" href="api/nsfw/gangbang?apikey=APIKEY">Gangbang</a>
-                    <a class="collapse-item" href="api/nsfw/glasses?apikey=APIKEY">Glasses</a>
-                    <a class="collapse-item" href="api/nsfw/hentai?apikey=APIKEY">Hentai</a>
-                    <a class="collapse-item" href="api/nsfw/hentaigif?apikey=APIKEY">Hentaigif</a>
-                    <a class="collapse-item" href="api/nsfw/jahy?apikey=APIKEY">Jahy</a>
-                    <a class="collapse-item" href="api/nsfw/masturbation?apikey=APIKEY">Masturbate</a>
-                    <a class="collapse-item" href="api/nsfw/nsfwNeko?apikey=APIKEY">NsfwNeko</a>
-                    <a class="collapse-item" href="api/nsfw/orgy?apikey=APIKEY">Orgy</a>
-                    <a class="collapse-item" href="api/nsfw/panties?apikey=APIKEY">Panties</a>
-                    <a class="collapse-item" href="api/nsfw/pussy?apikey=APIKEY">Pussy</a>
-                    <a class="collapse-item" href="api/nsfw/thighs?apikey=APIKEY">Anime Pussy</a>
-                    <a class="collapse-item" href="api/nsfw/yuri?apikey=APIKEY">Yuri</a>
-                    <a class="collapse-item" href="api/cersex?apikey=APIKEY">Cerita sex</a>
-                    <h6 class="collapse-header">SFW API</h6>
+                    <h6 class="collapse-header">SFW FITUR</h6>
                     <a class="collapse-item" href="api/sfw/waifu?apikey=APIKEY">Waifu</a>
                     <a class="collapse-item" href="api/sfw/neko?apikey=APIKEY">Neko</a>
                     <a class="collapse-item" href="api/sfw/shinobu?apikey=APIKEY">Shinobu</a>
                     <a class="collapse-item" href="api/sfw/megumin?apikey=APIKEY">Megumin</a>
-                    <a class="collapse-item" href="api/sfw/bully?apikey=APIKEY">Bully</a>
-                    <a class="collapse-item" href="api/sfw/cuddle?apikey=APIKEY">Cuddle</a>
-                    <a class="collapse-item" href="api/sfw/cry?apikey=APIKEY">Cry</a>
-                    <a class="collapse-item" href="api/sfw/kiss?apikey=APIKEY">Kiss</a>
-                    <a class="collapse-item" href="api/sfw/hug?apikey=APIKEY">Hug</a>
                     <a class="collapse-item" href="api/sfw/awoo?apikey=APIKEY">Awoo</a>
-                    <a class="collapse-item" href="api/sfw/lick?apikey=APIKEY">Lick</a>
           </div>
         </div>
             </li>
