Malah eror wkwkwk

--- a/views/index.html
+++ b/views/index.html
@@ -18,10 +18,11 @@
   <div class="sp-container">
     <div class="sp-content">
       <div class="sp-globe"></div>
-      <h2 class="frame-1">Selamat Datang</h2>
-      <h2 class="frame-2">Di Website</h2>
-      <h2 class="frame-3">Rest Api</h2>
-      <h2 class="frame-4">
+      <h2 class="frame-1">Selamat</h2>
+      <h2 class="frame-2">Datang</h2>
+      <h2 class="frame-3">Di Website</h2>
+      <h2 class="frame-4">Rest Api</h2>
+      <h2 class="frame-5">
         <span>Animoneesan</span>
         <span>Rest</span>
         <span>API's</span>
@@ -33,7 +34,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css?family=Barlow');
     body {
-      background: #310404 url(https://raw.githubusercontent.com/Iqbalzzz/api-denz-xyz/master/Iqbalz.jpg) no-repeat center center fixed;
+      background: #310404 url(https://tinyurl.com/Animoneesanbg) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
