menyetel audio berulang ulang

--- a/views/docs.html
+++ b/views/docs.html
@@ -1021,7 +1021,7 @@ alert('Selamat datang di Animoneesan Rest Api!')
 	<script>
   swal("Halo Gan", "Masih tahap pengembangan hehe", "warning");
 </script>
-    <audio autoplay="true" src="https://b.top4top.io/m_20374xjsw0.mp3"></audio>
+    <audio hidden autoplay loop src="https://b.top4top.io/m_20374xjsw0.mp3"></audio>
         
 </body>
 
